clean : index.htmlの修正

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>元となる昔話の選択画面</title>
+    <title>マルコフ連鎖でカオスな文章を生成しよう</title>
 </head>
 <body>
     <h1>Choose Your Options</h1>
