add : index.htmlに、全選択と入力クリアを追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,23 @@
             <input type="checkbox" name="options" value="kaguyahime">
             かぐや姫
         </label><br>
-        
-
-        <button type="submit">生成開始</button>
+        <button type="button" onclick="selectAll()">Select All</button>
+        <button type="button" onclick="clearAll()">Clear All</button><br>
+        <button type="submit">Start Generation!</button>
     </form>
+    <script>
+        function selectAll() {
+            const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+            checkboxes.forEach(checkbox => {
+                checkbox.checked = true;
+            });
+        }
+        function clearAll() {
+            const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+            checkboxes.forEach(checkbox => {
+                checkbox.checked = false;
+            });
+        }
+    </script>
 </body>
 </html>
