add : テキストデータの追加と、htmlの修正

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,24 @@
             一寸法師
         </label><br>
         <label>
-            <input type="checkbox" name="options" value="urasima">
-            浦島太郎
-        </label><br>
-        <label>
             <input type="checkbox" name="options" value="kaguyahime">
             かぐや姫
+        </label><br>
+        <label>
+            <input type="checkbox" name="options" value="kasajizou">
+            かさじぞう
+        </label><br>
+        <label>
+            <input type="checkbox" name="options" value="momotaro">
+            桃太郎
+        </label><br>
+        <label>
+            <input type="checkbox" name="options" value="omusubi">
+            おむすびころりん
+        </label><br>
+        <label>
+            <input type="checkbox" name="options" value="urasima">
+            浦島太郎
         </label><br>
         <button type="button" onclick="selectAll()">Select All</button>
         <button type="button" onclick="clearAll()">Clear All</button><br>
