--- a/templates/result.html
+++ b/templates/result.html
@@ -15,6 +15,7 @@
             color: #333;
             white-space: pre-wrap;
             display: inline-block;
+            margin : 8%;
         }
         .cursor {
             display: inline-block;
